# chess

./: .gdb_history  .gitignore  .peda-session-main.txt  Makefile
engine/: Makefile
engine/src/: chess.c  chess.h  main.c  util.c
src/: chess.c  chess.h  main.c  util.c
ui/: communicate.py  main.py  ui.cabal
ui/app/: Main.hs  Pieces.hs
